--- a/index.html
+++ b/index.html
@@ -14,10 +14,11 @@
     <div class="container">
       <div class="form">
         <input type="text" id="input" />
-        <button id="button">Add</button>
+        <button id="button" onclick="AddToList()">Add</button>
       </div>
       <ul id="todolist"></ul>
     </div>
     <script src="./app.js"></script>
+    <h4>Made by Gouri Agarwal</h4>
   </body>
 </html>
